--- a/README
+++ b/README
@@ -1,1 +1,7 @@
-Demo is available at http://dev.anuary.com/1f1715ac-ad96-536a-a462-74381c7a2baf/. I've setup this Git to ease the process of people helpind me to perfect this "game". The sole intention of developing this game is to better understand how can the data be exchanged simultaneosly beween many clients.
+# Multiplayer Game Board
+
+I've setup this Git to ease the process of people helping me to perfect this "game". The sole intention is to learn and perfect the way data is exchanged simultaneosly among many clients.
+
+The code is using Node.js and Socket.io.
+
+Demo is available at http://dev.anuary.com/1f1715ac-ad96-536a-a462-74381c7a2baf/. The game is controlled using arrow keys and spacebar.
